--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hidpi-daemon (17.10.0~alpha) artful; urgency=medium
+hidpi-daemon (17.10.0~alpha) artful; urgency=low
 
   * Daily WIP for 17.10.0
   * Initial release
