--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-hidpi-daemon (17.10.0) artful; urgency=low
+hidpi-daemon (17.10.0~alpha) artful; urgency=low
 
+  * Daily WIP for 17.10.0
   * Initial release
 
  -- David Jordan <david2@system76.com>  Wed, 04 Apr 2018 16:15:54 -0600
