--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+hidpi-daemon (17.10.2) artful; urgency=medium
+
+  * Increment version to override old release
+
+ -- Jeremy Soller <jeremy@system76.com>  Thu, 05 Apr 2018 14:43:09 -0600
+
+hidpi-daemon (17.10.1) artful; urgency=medium
+
+  * Remove old debian maintainance scripts
+
+ -- Jeremy Soller <jeremy@system76.com>  Thu, 05 Apr 2018 14:41:47 -0600
+
 hidpi-daemon (17.10.0) artful; urgency=low
 
   * Initial release
