--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 hidpi-daemon (17.10.1~~alpha) artful; urgency=low
 
   * Daily WIP for 17.10.1
+  * Use deprecated method to disable
+  * Never set display modes when disabled via gsetting
 
  -- David Jordan <david2@system76.com>  Mon, 09 Apr 2018 10:25:44 -0600
 
