--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 hidpi-daemon (17.10.3~~alpha) artful; urgency=low
 
   * Daily WIP for 17.10.3
+  * Workaround: Mutter disables external lowdpi on NVIDIA when in hidpi mode.
 
  -- David Jordan <david2@system76.com>  Mon, 16 Apr 2018 13:32:41 -0600
 
