--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 hidpi-daemon (18.04.0~~alpha) bionic; urgency=low
 
   * Daily WIP for 18.04.0
+  * Disable on NVIDIA graphics by default using gschema override
 
  -- David Jordan <david@david-Serval-WS>  Thu, 26 Apr 2018 14:27:06 -0600
 
