--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hidpi-daemon (18.04.1~~alpha) bionic; urgency=low
+
+  * Daily WIP for 18.04.1
+
+ -- Jeremy Soller <jeremy@system76.com>  Tue, 08 May 2018 16:28:12 -0600
+
 hidpi-daemon (18.04.0) bionic; urgency=low
 
   * Disable on NVIDIA graphics by default using gschema override
