--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-hidpi-daemon (18.04.1~~alpha) bionic; urgency=low
+hidpi-daemon (18.04.1) bionic; urgency=low
 
-  * Daily WIP for 18.04.1
   * Bump for rebuild
 
- -- Jeremy Soller <jeremy@system76.com>  Tue, 08 May 2018 16:28:12 -0600
+ -- Jeremy Soller <jeremy@system76.com>  Tue, 08 May 2018 16:30:42 -0600
 
 hidpi-daemon (18.04.0) bionic; urgency=low
 
