--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hidpi-daemon (18.04.2~~alpha) bionic; urgency=low
+
+  * Daily WIP for 18.04.2
+
+ -- David Jordan <david2@system76.com>  Thu, 10 May 2018 12:31:36 -0600
+
 hidpi-daemon (18.04.1) bionic; urgency=low
 
   * Bump for rebuild
