--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hidpi-daemon (18.04.3~~alpha) bionic; urgency=low
+
+  * Daily WIP for 18.04.3
+
+ -- David Jordan <david2@system76.com>  Thu, 07 Jun 2018 14:32:21 -0600
+
 hidpi-daemon (18.04.2) bionic; urgency=low
 
   * Disable notifications when daemon is disabled.
