--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-hidpi-daemon (18.04.5~~alpha) bionic; urgency=low
+hidpi-daemon (18.04.5) bionic; urgency=low
 
-  * Daily WIP for 18.04.5
   * Fix compilation on eoan
 
- -- Jeremy Soller <jeremy@system76.com>  Tue, 15 Oct 2019 11:24:15 -0600
+ -- Jeremy Soller <jeremy@system76.com>  Tue, 15 Oct 2019 11:24:55 -0600
 
 hidpi-daemon (18.04.4) bionic; urgency=low
 
