--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hidpi-daemon (18.04.7~~alpha) bionic; urgency=low
+
+  * Daily WIP for 18.04.7
+
+ -- Tim Crawford <tcrawford@system76.com>  Fri, 02 Sep 2022 10:26:20 -0600
+
 hidpi-daemon (18.04.6) bionic; urgency=low
 
   * Update hidpidaemon2.py file to set gi require version
